--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,8 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: scp
+      run: 
+        echo "${{ secrets.SECRET_KEY }}" > ~/.ssh/id_rsa
+        scp target/*.jar root@${{ secrets.SECRET_HOST }}:/Tools/
