--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,6 @@ jobs:
       
     - name: scp
       run: 
-        mkdir -p ~/.ssh/
+        mkdir -p ~/.ssh
         echo "${{ secrets.SECRET_KEY }}" > ~/.ssh/id_rsa
         scp target/*.jar root@${{ secrets.SECRET_HOST }}:/Tools/
