--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
       run: mvn -B package --file pom.xml
       
     - name: scp
-      run: 
+      run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.SECRET_KEY }}" > ~/.ssh/id_rsa
         scp target/*.jar root@${{ secrets.SECRET_HOST }}:/Tools/
